
To import a different geometry, just change the input filename in src/DetectorConstruction.cc like we used to change the RockOption string.
To create a new geometry file, just uncomment the GDML lines in the main() function of CoBaLEP.cc and change the output filename to whatever you want.


07/10/2019

Performed a study of path length for muons which enter the LAr tank. In the current geometry the tank is 8m in height, 8m in diameter, and cylindrical. Surprisingly, the average path length was significantly lower than 8, ringing in at 5.18 m.

Running a new batch of 500,000 muons, same "standard" setup but energies from 0-2 TeV, flat. After re-investigating the problems with Ralph's sufrace-to-lab simulations, it's again apparent these can't be used for any meaningful discussions of physics results. Ralph is working on new surface-to-lab simulations at this time.

Changed meihimweighting.C to make it a part of standard production. Just one more command to call when processing...

09/19/2019

Since previous update, have done another LAr study (of neutron showering), increased statistics in the 0-2 TeV setup described in the previous update, realized GDML geometries don't allow for range cuts, made new geometries (for the LAr neutron study, for a small LAr volume study, and for a "new" geometry based on the pCDR). Updated some branch names for clarity, added a "startenergy" branch for nuclear information. Ran statistics in the small LAr volume study.

10/9/2019

Changed the names of some branches in the nuclearoutput file. Re-enabled creatorprocess (why was it even disabled in the first place?) for nuclearoutputs. Ran some more simulations in the OG geometry, same results on the Ar41 production suppression. 