@@ -26,4 +26,4 @@
 #/vis/scene/endOfEventAction accumulate
 
 
-/run/beamOn 10000
+/run/beamOn 1000000
